[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lightcone-sdk"
version = "0.1.0"
description = "Python SDK for the Lightcone prediction market protocol on Solana"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Lightcone Team" }
]
keywords = ["solana", "prediction-markets", "defi", "blockchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "solana>=0.35.0",
    "solders>=0.21.0",
    "pynacl>=1.5.0",
    "pycryptodome>=3.19.0",
    "base58>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "spl-token>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/lightcone/lightcone-sdk"
Documentation = "https://docs.lightcone.io"
Repository = "https://github.com/lightcone/lightcone-sdk"

[tool.hatch.build.targets.wheel]
packages = ["lightcone_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests (run offline)",
    "devnet: Integration tests against devnet",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
