[package]
name = "lightcone-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for the Lightcone Protcol"
license = "MIT"
repository = "https://github.com/0xZohan/lightcone"
keywords = ["solana", "lightcone", "sdk", "defi"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
# Solana core - v3.x
solana-sdk = "3.0"
solana-sdk-ids = "3.1"
solana-client = "3.1"
solana-commitment-config = "3.1"
solana-system-interface = { version = "3.0", features = ["bincode"] }

# Async
tokio = { version = "1.49", features = ["full", "sync"] }

# Crypto
ed25519-dalek = { version = "2.2", features = ["std"] }
sha3 = "0.10"

# SPL - v9/v10 for solana-sdk 3.x compatibility
spl-token = "9.0"
spl-token-2022 = "10.0"
spl-associated-token-account = "8.0"

# Utilities
thiserror = "2.0"
rust_decimal = "1"
bs58 = "0.5"
hex = "0.4"
lazy_static = "1.5"
rand = "0.8"
urlencoding = "2.1"

# HTTP client (for API module)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"

# Logging
tracing = "0.1"

# Async utilities
async-stream = "0.3"
pin-project-lite = "0.2"

[dev-dependencies]
tokio-test = "0.4"
dotenvy = "0.15"
serde_json = "1.0"

[features]
default = []
live_tests = []
