[package]
name = "lightcone-sdk"
version = "0.1.6"
edition = "2021"
description = "Rust SDK for the Lightcone Protcol"
license = "MIT"
repository = "https://github.com/lightcone-street/lightcone-sdk/tree/main/rust"
keywords = ["solana", "lightcone", "sdk"]

[dependencies]
# Solana core - v3.x
# For WASM: no features to avoid wasm-bindgen conflicts (basic types work without features)
# For non-WASM (client feature): use full features including signature/Keypair support
solana-sdk = { version = "3.0", default-features = false }
solana-sdk-ids = { version = "3.1", default-features = false }
solana-system-interface = { version = "3.0", default-features = false, features = ["bincode"] }

# Solana client (non-WASM, optional)
solana-client = { version = "3.1", optional = true }
solana-commitment-config = { version = "3.1", optional = true }

# Async (non-WASM, optional)
# When enabled, includes time, net, sync features needed by api/websocket/client
tokio = { version = "1.49", default-features = false, features = ["time", "net", "sync"], optional = true }

# Crypto (WASM-compatible)
ed25519-dalek = { version = "2.2", features = ["std"] }
sha3 = "0.10"

# SPL - v9/v10 for solana-sdk 3.x compatibility (WASM-compatible)
spl-token = "9.0"
spl-token-2022 = "10.0"
spl-associated-token-account = "8.0"

# Utilities (WASM-compatible)
thiserror = "2.0"
rust_decimal = "1"
bs58 = "0.5"
hex = "0.4"
lazy_static = "1.5"
rand = "0.8"
urlencoding = "2.1"

# HTTP client (for API module, non-WASM, optional)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebSocket (non-WASM, optional)
tokio-tungstenite = { version = "0.26", features = ["native-tls"], optional = true }
futures-util = "0.3"

# Logging (WASM-compatible)
tracing = "0.1"

# Async utilities (WASM-compatible)
async-stream = "0.3"
pin-project-lite = "0.2"

[dev-dependencies]
tokio-test = "0.4"
dotenvy = "0.15"
serde_json = "1.0"

[features]
default = ["full"]
full = ["client", "api", "websocket"]
client = ["dep:solana-client", "dep:solana-commitment-config", "dep:tokio", "solana-sdk/full"]
api = ["dep:reqwest", "dep:tokio"]
websocket = ["dep:tokio-tungstenite", "dep:tokio"]
# Marker feature for WASM builds - enables nothing extra, just indicates WASM compatibility
wasm = []
live_tests = []
