[package]
name = "lightcone-sdk"
version = "0.1.81"
edition = "2021"
description = "Rust SDK for the Lightcone Protcol"
license = "MIT"
repository = "https://github.com/lightcone-street/lightcone-sdk/tree/main/rust"
keywords = ["solana", "lightcone", "sdk"]

[dependencies]
# Solana core types - WASM-compatible standalone crates
solana-pubkey = { version = "3.0", features = ["serde"] }
solana-signature = { version = "3.1", features = ["verify"] }
solana-instruction = "3.1"
solana-transaction = { version = "3.0", features = ["serde", "bincode"] }
solana-hash = "4.0"
solana-sdk-ids = { version = "3.1", default-features = false }
solana-system-interface = { version = "3.0", default-features = false, features = ["bincode"] }

# Solana client (non-WASM, optional)
solana-client = { version = "3.1", optional = true }
solana-commitment-config = { version = "3.1", optional = true }
solana-keypair = { version = "3.0", optional = true }
solana-signer = { version = "3.0", optional = true }

# Async (non-WASM, optional)
# When enabled, includes time, net, sync features needed by api/websocket/client
tokio = { version = "1.49", default-features = false, features = ["time", "net", "sync"], optional = true }

# Crypto (WASM-compatible)
sha3 = "0.10"

# SPL - v9/v10 for solana-sdk 3.x compatibility (WASM-compatible)
spl-token = "9.0"
spl-token-2022 = "10.0"
spl-associated-token-account = "8.0"

# Utilities (WASM-compatible)
thiserror = "2.0"
rust_decimal = "1"
bincode = "^1.3.3"
bs58 = "0.5"
hex = "0.4"
lazy_static = "1.5"
rand = "0.8"
urlencoding = "2.1"

# HTTP client (for API module, non-WASM, optional)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebSocket (non-WASM, optional)
tokio-tungstenite = { version = "0.26", features = ["native-tls"], optional = true }
futures-util = "0.3"

# Logging (WASM-compatible)
tracing = "0.1"

# Async utilities (WASM-compatible)
async-stream = "0.3"
pin-project-lite = "0.2"

[dev-dependencies]
tokio-test = "0.4"
dotenvy = "0.15"
serde_json = "1.0"

[features]
default = ["full"]
full = ["client", "api", "websocket"]
client = ["dep:solana-client", "dep:solana-commitment-config", "dep:solana-keypair", "dep:solana-signer", "dep:tokio"]
api = ["dep:reqwest", "dep:tokio"]
auth = ["dep:solana-keypair", "dep:solana-signer", "dep:reqwest", "dep:tokio"]
websocket = ["auth", "dep:tokio-tungstenite", "dep:tokio", "dep:solana-keypair", "dep:solana-signer"]
# Marker feature for WASM builds - enables nothing extra, just indicates WASM compatibility
wasm = []
live_tests = []
